--- a/Src/iFramework.Plugins/IFramework.MessageQueue.RocketMQ/IFramework.MessageQueue.RocketMQ.csproj
+++ b/Src/iFramework.Plugins/IFramework.MessageQueue.RocketMQ/IFramework.MessageQueue.RocketMQ.csproj
@@ -2,6 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.1</TargetFramework>
+    <GeneratePackageOnBuild>True</GeneratePackageOnBuild>
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.SourceLink.GitHub" Version="1.1.1">
@@ -10,6 +11,9 @@
     </PackageReference>
     <ProjectReference Include="..\..\iFramework\IFramework.csproj" />
     <ProjectReference Include="..\IFramework.MessageQueue.Client.Abstracts\IFramework.MessageQueue.Client.Abstracts.csproj" />
-    <ProjectReference Include="..\rocketmq-client-csharp\rocketmq-client-csharp.csproj" />
+    <ProjectReference Include="..\rocketmq-client-csharp\rocketmq-client-csharp.csproj">
+      <Private></Private>
+      <CopyLocalSatelliteAssemblies></CopyLocalSatelliteAssemblies>
+    </ProjectReference>
   </ItemGroup>
 </Project>
