--- a/Src/iFramework.Plugins/rocketmq-client-csharp/rocketmq-client-csharp.csproj
+++ b/Src/iFramework.Plugins/rocketmq-client-csharp/rocketmq-client-csharp.csproj
@@ -1,6 +1,6 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
     <PropertyGroup>
-        <PackageId>RocketMQ.Client</PackageId>
+        <PackageId>IFramework.RocketMQ.Client</PackageId>
         <PackageVersion>5.1.0</PackageVersion>
         <Version>$(PackageVersion)</Version>
 
@@ -9,7 +9,7 @@
         <TargetFrameworks>netstandard2.1</TargetFrameworks>
         <PackageLicenseExpression>Apache-2.0</PackageLicenseExpression>
         <RootNamespace>Org.Apache.Rocketmq</RootNamespace>
-        <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+        <GeneratePackageOnBuild>True</GeneratePackageOnBuild>
         <Description>.NET Client for Apache RocketMQ</Description>
         <PackageProjectUrl>https://github.com/apache/rocketmq-clients</PackageProjectUrl>
         <RepositoryUrl>https://github.com/apache/rocketmq-clients</RepositoryUrl>
@@ -19,20 +19,22 @@
 
         <LangVersion>8</LangVersion>
 
+        <PackageReleaseNotes>forked from apache rocketmq-client-csharp 5.1.0, change project target framework to netstandard2.1</PackageReleaseNotes>
+
     </PropertyGroup>
 
     <ItemGroup>
         <PackageReference Include="Crc32.NET" Version="1.2.0" />
-        <PackageReference Include="Google.Protobuf" Version="3.19.4" />
-        <PackageReference Include="Grpc.Net.Client" Version="2.43.0" />
-        <PackageReference Include="NLog" Version="4.7.13" />
-        <PackageReference Include="Grpc.Tools" Version="2.43.0">
+        <PackageReference Include="Google.Protobuf" Version="3.25.2" />
+        <PackageReference Include="Grpc.Net.Client" Version="2.60.0" />
+        <PackageReference Include="NLog" Version="5.2.8" />
+        <PackageReference Include="Grpc.Tools" Version="2.60.0">
             <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
             <PrivateAssets>all</PrivateAssets>
         </PackageReference>
-        <PackageReference Include="OpenTelemetry" Version="1.3.1" />
-        <PackageReference Include="OpenTelemetry.Api" Version="1.3.1" />
-        <PackageReference Include="OpenTelemetry.Exporter.OpenTelemetryProtocol" Version="1.3.1" />
+        <PackageReference Include="OpenTelemetry" Version="1.7.0" />
+        <PackageReference Include="OpenTelemetry.Api" Version="1.7.0" />
+        <PackageReference Include="OpenTelemetry.Exporter.OpenTelemetryProtocol" Version="1.7.0" />
 
         <Protobuf Include="Protos\apache\rocketmq\v2\definition.proto" ProtoRoot="Protos" GrpcServices="Client" />
         <Protobuf Include="Protos\google\rpc\code.proto" ProtoRoot="Protos" GrpcServices="Client" />
