--- a/Src/Sample/Sample.CommandServiceCore/Sample.CommandServiceCore.csproj
+++ b/Src/Sample/Sample.CommandServiceCore/Sample.CommandServiceCore.csproj
@@ -84,6 +84,7 @@
 		<ProjectReference Include="..\..\iFramework.Plugins\IFramework.EventStore.Redis\IFramework.EventStore.Redis.csproj" />
 		<ProjectReference Include="..\..\iFramework.Plugins\IFramework.Infrastructure.EventSourcing\IFramework.Infrastructure.EventSourcing.csproj" />
 		<ProjectReference Include="..\..\iFramework.Plugins\IFramework.JsonNetCore\IFramework.JsonNet.csproj" />
+		<ProjectReference Include="..\..\iFramework.Plugins\IFramework.Logging.Elasticsearch\IFramework.Logging.Elasticsearch.csproj" />
 		<ProjectReference Include="..\..\iFramework.Plugins\IFramework.Logging.Log4Net\IFramework.Logging.Log4Net.csproj" />
 		<ProjectReference Include="..\..\iFramework.Plugins\IFramework.Logging.Serilog\IFramework.Logging.Serilog.csproj" />
 		<ProjectReference Include="..\..\iFramework.Plugins\IFramework.MessageQueue.EQueue\IFramework.MessageQueue.EQueue.csproj" />
